--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.23"
+serde = { version = "1.0.152", features = ["serde_derive"] }
+serde_json = "1.0.93"
+tplink-shome-protocol = "0.1.2"
 
