--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.23"
+reqwest = { version = "0.11.14", features = ["blocking"] }
 serde = { version = "1.0.152", features = ["serde_derive"] }
+serde-xml-rs = "0.6.0"
 serde_json = "1.0.93"
 tplink-shome-protocol = "0.1.2"
-
