--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.23"
-reqwest = { version = "0.11.14", features = ["blocking"] }
+chrono = "0.4"
 serde = { version = "1.0.152", features = ["serde_derive"] }
 serde-xml-rs = "0.6.0"
 serde_json = "1.0.93"
 tplink-shome-protocol = "0.1.2"
+ureq = "2.9.6"
